--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-dashboard-2-react",
+  "name": "Samebrothers Application",
   "version": "2.1.0",
   "private": true,
   "author": "Creative Tim",
