--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "@types/react": "^17.0.83",
+    "ajv": "^8.17.1",
     "axios": "^1.3.4",
     "chart.js": "3.4.1",
     "chroma-js": "2.4.2",
